@@ -1,3 +1,11 @@
+2005-12-07  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/Writer.cpp:
+	* src/Writer.h:
+	* src/main.cpp:
+
+	Add PPM format output. Patch by Robert O'Callahan.
+
 2005-11-28  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.ac:
